bullets in index

--- a/index.Rmd
+++ b/index.Rmd
@@ -24,5 +24,6 @@ A metapackage is a package that contains other packages. When you install this p
 ## 2. Documentation
 
 The series of articles on this website are created from TA review sessions where I covered important aspects of programming in R. There are two sections:
-* The Art of Metrics contains articles on all of the basic estimation and inference techniques from an advanced undergraduate or first-semester graduate econometrics class. It focuses heavily on comparisons with Stata and aims to build a foundational set of metrics tools.
-* The Zen of Programming has a completely different focus from the previous section. What budding computer scientists (a.k.a. you) sometimes miss is that there is a whole world of non-technical skills that make programming more productive, fun, and _reproducible_. This has been dubbed the "Hidden Curriculum" of data science by Prof. Scott Cunningham. The Zen of Programming aims to take the "hidden" out of that title and teach a set of skills for project management that help you produce high-quality, shareable, and understandable academic research.
+
+* **The Art of Metrics** contains articles on all of the basic estimation and inference techniques from an advanced undergraduate or first-semester graduate econometrics class. It focuses heavily on comparisons with Stata and aims to build a foundational set of metrics tools.
+* **The Zen of Programming** has a completely different focus from the previous section. What budding computer scientists (a.k.a. you) sometimes miss is that there is a whole world of non-technical skills that make programming more productive, fun, and _reproducible_. This has been dubbed the "Hidden Curriculum" of data science by Prof. Scott Cunningham. The Zen of Programming aims to take the "hidden" out of that title and teach a set of skills for project management that help you produce high-quality, shareable, and understandable academic research.
