--- a/vignettes/zen/anatomy-2.Rmd
+++ b/vignettes/zen/anatomy-2.Rmd
@@ -39,18 +39,18 @@ I created a project using the "New Directory" option and called it test. A scree
 
 ### What Actually *Is* an R Project?
 
-The way that RStudio *knows* that your folder is an R project is because it has an `.Rproj` file. The file itself just stores some very minimal configuration. Here's an example `.Rproj` file from one of my projects on GitHub:
+The way that RStudio knows that your folder is an R project is because it has an `.Rproj` file. The file itself just stores some very minimal configuration. Here's an example `.Rproj` file from one of my projects on GitHub:
 
-![](../../man/figures/anatomy-2-rprojfile.png)
+![](../../man/figures/anatomy-2-rprojfile.png "A screenshot of an Rproj file")
 
-The configuration that is stored in these files is not very important. The importance is mainly that it signals to RStudio that *this folder is a project*. With that signal to RStudio comes many benefits, described below. We touched on the first point already, and each of the subsequent points will be covered in depth in later articles.
+The configuration that is stored in these files is not very important. The importance is mainly that it signals to RStudio that *this folder is a project*. With that signal to RStudio come many benefits, described below. We touched on the first point already, and each of the subsequent points will be covered in depth in later articles.
 
-* Whenever you open the project, you are greeted with a fresh clean RStudio window. More below on why this is such a good thing. I should note you can also open R projects by double-clicking on the `.Rproj` file itself.
+* Whenever you open the project, you are greeted with a fresh clean RStudio window. I should note you can also open R projects by double-clicking on the `.Rproj` file itself.
 * The `here` package looks for an `.Rproj` file and helps you easily locate all of your files *relative* to the folder that your `.Rproj` file is in.
 * The RStudio Git tab is automatically activated inside of an R project, letting you sync your code with GitHub with the click of a button.
 * The `renv` package "bootstraps" itself (starts itself up and starts running) when your project loads.
 
-### A "Fresh" Workflow
+### What a "Fresh Clean Window" is Worth
 
 Creating and using projects is part of a workflow that keeps you disciplined as a researcher. When you start fresh every time you open up RStudio, you are forced to write down your work in a file.
 
@@ -60,7 +60,9 @@ Toward that end, I recommend disabling the "Save workspace to .RData on exit" se
 
 ### Conclusion
 
-This guide was sort of an overview of what projects look like in R. As you might have realized, the appeal of R projects is that they enable a lot of the other features that I will talk about in subsequent articles. The pattern that we want to start thinking about is that projects are isolated, reproducible environments. They not only contain code and data files, but also "meta information" that makes it possible for others to download your code and data and reproduce your results. We should love and revel in the fact that RStudio is a wonderful environment to tinker and experiment, but we should also have the discipline to realize that eventually, we need to write down the concrete steps that produce the results we have.
+This guide was sort of an overview of what projects look like in R. As you might have realized, the appeal of R projects is that they enable a lot of the other features that I will talk about in subsequent articles. The pattern that we want to start thinking about is that projects are isolated, reproducible environments. They not only contain code and data files, but also "meta information" that makes it possible for others to download your code and data and reproduce your results. 
+
+Along those lines, we should love and revel in the fact that RStudio is a wonderful environment to tinker and experiment. However, we should also have the discipline to realize that eventually, we need to write down the concrete steps that produce the results we have.
 
 <hr>
 
