--- a/vignettes/zen/anatomy-2.Rmd
+++ b/vignettes/zen/anatomy-2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Anatomy of an R Project: The Project File"
+title: "Anatomy of an R Project: The Project Itself"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{anatomy-2}
